fix: css sosmed

--- a/docs/assets/css/socialmedia.css
+++ b/docs/assets/css/socialmedia.css
@@ -12,10 +12,10 @@
 
 
 .sm-wa{
-  color: #075e54;
+  color: #5A73FF;
 }
 .sm-wa:hover{
-  color: #075e54;
+  color: #5A73FF;
 }
 
 .sm-wa-detail{
@@ -23,36 +23,36 @@
 }
 
 .sm-fb{
-  color: #3b5998;
+  color: #5A73FF;
 }
 .sm-fb:hover{
-  color: #3b5998;
+  color: #5A73FF;
 }
 
 .sm-tw{
-  color: #00acee;
+  color: #5A73FF;
 }
 .sm-tw:hover{
-  color: #00acee;
+  color: #5A73FF;
 }
 
 .sm-li{
-  color: #0077b5;
+  color: #5A73FF;
 }
 .sm-li:hover{
-  color: #0077b5;
+  color: #5A73FF;
 }
 
 
 .sm-ig{
-  color: #e43c62;
+  color: #5A73FF;
 }
 .sm-ig:hover{
-  color: #e43c62;
+  color: #5A73FF;
 }
 
 .sm{
-  margin-right: 20px;
+  margin-right: 19px;
   font-size: 25pt;
 }
 .sm span{
